@@ -71,6 +71,9 @@ public:
     /// PointToPoint devices, but not with WiFi or WiMax.
     DROP_QUEUE,
 
+    /// Packet dropped by the queue disc
+    DROP_QUEUE_DISC,
+
     DROP_INTERFACE_DOWN,   /**< Interface is down so can not send packet */
     DROP_ROUTE_ERROR,   /**< Route error */
 
@@ -114,6 +117,9 @@ private:
   /// Log a packet being dropped by a queue
   /// \param ipPayload IP payload
   void QueueDropLogger (Ptr<const Packet> ipPayload);
+  /// Log a packet being dropped by a queue disc
+  /// \param item queue item
+  void QueueDiscDropLogger (Ptr<const QueueItem> item);
 
   Ptr<Ipv6FlowClassifier> m_classifier; //!< the Ipv6FlowClassifier this probe is associated with
 };
